--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,34 @@
+sonm-core (0.4.21) unstable; urgency=low
+
+  * Added: oracle must process logs starting from the current block (#1625).
+    This PR extends oracle with the following option: now it can process
+    transactions from the current block, not from the beginning of the times. It
+    was made because restarting non-master Oracle instance leads to full
+    transaction log re-process, which is obviously useless.
+  * Added: added rate counters in NPP dialer metrics (#1805).
+  * Added: devices storage (#1738).
+    Smart contract for storing worker devices in blockchain.
+    This PR includes contract which stores transparent worker data as byte array,
+    and node and cli interface for fetching that data.
+    Worker updates it's devices during startup as json-serialized Hardware
+    structure (including benchmarks), which can be fetched for each worker via cli
+    interface.
+  * Fixed: default blocks batch size in blockchain config (#1822).
+  * Fixed: proper gas limit for device storage (#1820).
+  * Fixed: proper processing for collected DRI devices (#1818).
+    Now I know how to make a slice of pointers from the slice of values.
+    More on this https://github.com/golang/go/issues/22791#issuecomment-345391395.
+    Closes #1811.
+  * Fixed: devices migration without waiting multisig (#1812).
+  * Fixed: migration with proper multisig (#1810).
+    * fix: migration with proper multisig.
+  * Fixed: reduce delay on sonm-mon start (#1788).
+    sonm-mon no longer waits to worker become available before rendering
+    Also produce warning message on losing connection to node or worker
+    Slightly tuned text layout.
+
+ -- Evgeny Safronov <division494@gmail.com>  Mon, 14 Jan 2019 16:48:05 +0300
+
 sonm-core (0.4.20) unstable; urgency=low
 
   * Added: TTL for servers in Rendezvous (#1773).
